finished navbar links

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,3 +3,11 @@
 body {
     background-color: $background;
 }
+
+#myMovies {
+    text-align: center;
+}
+
+#authScreen {
+    text-align: center;
+}
